# bogue-tutorials

./: CHANGES.md  Contributing.md  LICENSE  Makefile  README.md  bogue-tutorials.opam  bogue-tutorials.opam.template  dune-project
.github/workflows/: workflow.yml
common/: Makefile  Makefile.main  copy_images.sh  copy_images.sh.old  disable_tuto.sh  dune.src  enable_tuto.sh  index.ml  index.mld  make_mld.sh  misc.css  new_tuto.sh
common/src/: Makefile  common.ml  index.ml  index.mld
counter/: Makefile
counter/src/: counter.ml  counter.mld  dune
docs/: index.html
docs/bogue-tutorials/: counter.html  hello.html  index.html  layouts.html  modif_parent.html  widgets.html
docs/odoc.support/: odoc.css
docs/odoc_support/: odoc.css
hello/: Makefile
hello/src/: Makefile  dune  hello.ml  hello.mld
layouts/: Makefile
layouts/src/: Makefile  dune  layouts.ml  layouts.mld
modif_parent/: ALIRE.org  Makefile  README.md  videocapture-2023-03-12_10.11.49
modif_parent/._d/: modif_parent.d
modif_parent/src/: .directory  Makefile  copy_images.sh  dune  index.ml  index.mld  modif_parent.ml  modif_parent.ml.save  modif_parent.mld
widgets/: Makefile
widgets/src/: Makefile  checkers-4.gv  dune  graph-volume.gv  graph.gv  videocapture-2024-01-21_18.40.44  widgets.ml  widgets.mld
