opam-version: "2.0"
version: "0.2.0"
synopsis: "Bogue Tutorials"
description: "Several tutorials for learning how to create GUIs with Bogue"
maintainer: ["San Vũ Ngọc"]
authors: ["San Vũ Ngọc"]
license: ["CC-BY-NC-4.0" "Apache-2.0"]
tags: ["bogue" "tutorial"]
homepage: "https://github.com/sanette/bogue-tutorials"
doc: "https://sanette.github.io/bogue-tutorials/bogue-tutorials/index.html"
bug-reports: "https://github.com/sanette/bogue-tutorials/issues"
depends: [
  "ocaml"
  "dune" {>= "3.2"}
  "bogue" {>= "20221112"}
  "odoc" {with-doc}
]
build: [
  ["dune" "subst"] {dev}
  [make "mld"]
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
  [make "css"] {with-doc} 
]
install: [
  ["rsync" "-av" "%{build}%/_build/default/_doc/_html/" doc] {with-doc}
]
dev-repo: "git+https://github.com/sanette/bogue-tutorials.git"
